# how_bad_was_my_crit_in_xiv

./: # To Do.md  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
crit_app/: api_queries.py  app.py  cards.py  config_example.py  db_setup.py  dmg_distribution.py  dps_potencies.csv  errors_app.py  figures.py  flag_recompute.py  gearset.md  party_cards.py  player_elements.py  rotation.py  rotation_jobs.py  shared_elements.py  test.ipynb  test.py
crit_app/assets/: base.css  clientside.js  components.css  dropdown.css  fonts.css  forms.css  nav.css  plots.css  stylesheets.css  tables.css
crit_app/callbacks/: __init__.py  gearset_callbacks.py
crit_app/job_data/: buffs.py  critical_hit_rate_buffs.csv  damage_buffs.csv  data.py  encounter_data.py  guaranteed_hits.py  guaranteed_hits_by_action.csv  guaranteed_hits_by_buff.csv  job_data.py  job_warnings.py  potencies.csv  potency_backills.md  roles.py  valid_encounters.py
crit_app/math_data/: 1-hit-crit.json  1-hit-crit.parquet  1-hit-dmg.json  1-hit-dmg.parquet  1-hit.json  1-hit.parquet  10-hit.json  10-hit.parquet  15-hit.json  15-hit.parquet  2-hit.json  2-hit.parquet  5-hit.json  5-hit.parquet  rotation_df.json
crit_app/pages/: about.py  analysis.py  analysis_history.py  analytics.py  compatibility.py  errors.py  math.py  not_found_404.py  party_analysis.py
crit_app/util/: dash_elements.py  db.py  gearset_manager.py  history.py  party_dps_distribution.py  player_dps_distribution.py
deploy/: crit_app.conf
dev/: app.py  buffs.py  config.py  dmg_distribution.py  dps_potencies.csv  rotation.py  rotation_jobs.py  test.py
dev/job_data/: data.py  direct_hit_rate_buffs.csv  potencies.csv
fflogs_rotation/: actions.py  bard.py  base.py  black_mage.py  dark_knight.py  dragoon.py  encounter_specifics.py  machinist.py  monk.py  ninja.py  paladin.py  reaper.py  rotation.py  rotation_jobs.py  rotation_jobs_old.py  samurai.py  viper.py
fflogs_rotation/job_data/: 2024-07-18-potencies.csv  2024-07-19-potencies.csv  critical_hit_rate_buffs.csv  damage_buffs.csv  data.py  direct_hit_rate_buffs.csv  game_data.py  guaranteed_hits_by_action.csv  guaranteed_hits_by_buff.csv  potencies.csv  potency_backills.md  tinctures.py
fflogs_rotation/tests/: config.py  test_black_mage.py  test_monk.py  (+5 more)
tests/: conftest.py  ruff.toml
(+362 files in other folders)
