[project]
name = "how-bad-was-my-crit-in-xiv"
version = "0.1.0"
description = ""
authors = [
    {name = "acerola", email = "ffxivacerola@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "dash[diskcache]>=2.18, <3.0",
    "dash-bootstrap-components>=1.6.0, <2.0.0",
    "dash-core-components>=2.0.0, <3.0.0",
    "dash-html-components>=2.0.0, <3.0.0",
    "dash-table>=5.0.0, <6.0.0",
    "ffxiv_stats==0.6.0",
    "numpy>=2.1.1, <3.0.0",
    "pandas>=2.2.2, <3.0.0",
    "plotly>=5.24.0, <6.0.0",
    "scipy>=1.14.1, <2.0.0",
    "coreapi>=2.3.3, <3.0.0",
    "gunicorn>=23.0.0, <24.0.0",
    "pyarrow>=17.0.0, <18.0.0",
    "dash-auth>=2.3.0, <3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.4, <1.0.0",
    "ipykernel>=6.29.5, <7.0.0",
    "pre-commit>=4.0.1, <5.0.0",
    "pydocstringformatter>=0.7.3, <1.0.0",
    "pytest>=8.3.4, <9.0.0",
    "pytest-cov>=6.0.0, <7.0.0",
    "pytest-html>=3.1.0, <4.0.0",
    "nbformat>=5.10.4, <6.0.0",
    "hatchling",
]

[tool.ruff]
# Same as Black.
line-length = 88

[tool.ruff.lint]
ignore = ["E712"] # Pandas requires == True

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["crit_app", "fflogs_rotation"]
